# ArrowSchemaToJSON

./: .gitignore  CMakeLists.txt  README.md  example.cpp  installArrow.sh  installDependencies.sh  test  test.cpp
build_make/: main
build_make/tests/: test
include/: CompositeDataTypeConverter.hpp  CompositeFieldConverter.hpp  DataTypeConverter.hpp  FieldConverter.hpp  MetadataConverter.hpp  SchemaConverter.hpp  SimpleDataTypeConverter.hpp  SimpleFieldConverter.hpp
src/: CMakeLists.txt  CompositeDataTypeConverter.cpp  CompositeFieldConverter.cpp  DataTypeConverter.cpp  FieldConverter.cpp  MetadataConverter.cpp  SchemaConverter.cpp  SimpleDataTypeConverter.cpp  SimpleFieldConverter.cpp
tests/: CMakeLists.txt  unit_CompositeFieldConverter.cpp  unit_MetaDataConverter.cpp  unit_MetadataConverter.cpp  unit_SimpleFieldConverter.cpp
